refactored custom db labels and keys to make referencing custom dbs consistent.